--- a/style.css
+++ b/style.css
@@ -240,6 +240,9 @@ body._touch .menu__link {
 
 
 @media (max-width: 767px) {
+      body{
+        box-sizing: border-box;
+    }
     .menu__icon {
         z-index: 5;
         display: block;
